@@ -7,8 +7,6 @@ LDADD = $(top_builddir)/itpp/libitpp.la
 AM_CXXFLAGS = $(CXXFLAGS_OPT)
 endif
 
-EXTRA_DIST = fastica_test_data.txt parser_test_data.txt $(ref_sources) 
-
 BASE_TESTS = \
 	array_test \
 	bessel_test \
@@ -77,8 +75,9 @@ STAT_TESTS = \
 	histogram_test \
 	stat_test
 
-check_PROGRAMS = $(BASE_TESTS) $(COMM_TESTS) $(FIXED_TESTS) $(OPTIM_TESTS) \
+ALL_TESTS = $(BASE_TESTS) $(COMM_TESTS) $(FIXED_TESTS) $(OPTIM_TESTS) \
 	$(SIGNAL_TESTS) $(STAT_TESTS)
+
 
 array_test_SOURCES = array_test.cpp
 bch_test_SOURCES = bch_test.cpp
@@ -131,11 +130,15 @@ turbo_test_SOURCES = turbo_test.cpp
 vec_test_SOURCES = vec_test.cpp
 window_test_SOURCES = window_test.cpp
 
-noext_tests = $(patsubst %$(EXEEXT), %, $(check_PROGRAMS))
-ref_sources = $(patsubst %$(EXEEXT), %.ref, $(check_PROGRAMS))
 
-check-local: $(check_PROGRAMS) $(ref_sources)
-	@for i in $(noext_tests); do \
+check_PROGRAMS = $(ALL_TESTS)
+ref_files = $(ALL_TESTS:=.ref)
+tmp_files = $(ALL_TESTS:=.tmp)
+
+EXTRA_DIST = fastica_test_data.txt parser_test_data.txt $(ref_files) 
+
+check-local: $(check_PROGRAMS) $(ref_files)
+	@for i in $(ALL_TESTS); do \
 		echo ------------------------------------------------------------------------------; \
 		./$$i$(EXEEXT) | sed 's/^M$$//' | sed 's/\(-\?[0-9]\+\.\?[0-9]*e[+-]\)0\([0-9][0-9]\)/\1\2/g' > $$i.tmp; \
 		diff $$i.tmp $(srcdir)/$$i.ref > /dev/null; \
@@ -148,6 +151,4 @@ check-local: $(check_PROGRAMS) $(ref_sources)
 	echo ------------------------------------------------------------------------------
 
 clean-local:
-	rm -f *.tmp
-	rm -f gf2mat_test.alist 
-	rm -f ldpc_test.codec
+	-rm -f $(tmp_files) gf2mat_test.alist ldpc_test.codec
